[package]
name = "digital-space-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.18.0"
regex = "1.10.2"
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
